Refatoração 4: Refinando classe 'UI'